Fix section jumping

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,7 @@
+html {
+  scroll-padding-top: 60px;
+}
+
 #main-content{
   margin-top: 100px;
 }
